syntax = "proto3";

option go_package = "./sign_service";

package sign_service; // Updated package name

service SignService {
  rpc SignMessage(SignRequest) returns (SignResponse);
}

message SignRequest {
  bytes hash = 1;
}

message SignResponse {
  bytes signature = 1;
}
